--- a/guikuki-service/pom.xml
+++ b/guikuki-service/pom.xml
@@ -70,6 +70,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- Commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
