--- a/guikuki-web/pom.xml
+++ b/guikuki-web/pom.xml
@@ -100,6 +100,13 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!-- Commons-Lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <!-- AspectJ -->
         <dependency>
             <groupId>org.aspectj</groupId>
