Added detail button on Restaurants list page and separation of restaurantDetail and restaurantListItem concepts.

--- a/guikuki-web/src/main/resources/guikuki.properties
+++ b/guikuki-web/src/main/resources/guikuki.properties
@@ -9,5 +9,8 @@ header.menu.restaurants=Restaurantes
 header.menu.rankings=Rankings
 header.menu.contact=Contacto
 
+# Restaurant List Item
+restaurant.list.item.detail.button=Detalles
+
 # Footer
 footer.copyright=&copy; 2014, Guikuki. Todos los derechos reservados.
