Restaurant Detail view improved.

--- a/guikuki-web/src/main/resources/guikuki.properties
+++ b/guikuki-web/src/main/resources/guikuki.properties
@@ -12,5 +12,10 @@ header.menu.contact=Contacto
 # Restaurant List Item
 restaurant.list.item.detail.button=Detalles
 
+# Restaurant Detail
+restaurant.detail.general.zone=Zona
+restaurant.detail.general.address=Direcci&oacute;n
+restaurant.detail.general.telephono=Tel&eacute;fono
+
 # Footer
 footer.copyright=&copy; 2014, Guikuki. Todos los derechos reservados.
