Restaurant Detail view with tabs. First General tab completed.

--- a/guikuki-web/src/main/resources/guikuki.properties
+++ b/guikuki-web/src/main/resources/guikuki.properties
@@ -13,9 +13,13 @@ header.menu.contact=Contacto
 restaurant.list.item.detail.button=Detalles
 
 # Restaurant Detail
+restaurant.detail.general=General
 restaurant.detail.general.zone=Zona
 restaurant.detail.general.address=Direcci&oacute;n
-restaurant.detail.general.telephono=Tel&eacute;fono
+restaurant.detail.general.telephone=Tel&eacute;fono
+restaurant.detail.gallery=Galer&iacute;a
+restaurant.detail.menu=Carta
+restaurant.detail.opinions=Opiniones
 
 # Footer
 footer.copyright=&copy; 2014, Guikuki. Todos los derechos reservados.
